[gd_scene load_steps=3 format=3 uid="uid://ckumpl45hmii"]

[ext_resource type="Script" path="res://prefab/UI/ValueDisplay.gd" id="1_016yc"]
[ext_resource type="PackedScene" uid="uid://c01to73ba30u0" path="res://prefab/UI/FloatingText.tscn" id="2_5e4jn"]

[node name="ValueDisplay" type="Node2D"]
script = ExtResource("1_016yc")
damage_color = Color(0.811765, 0, 0, 1)
heal_color = Color(0, 0.694118, 0, 1)
energie_color = Color(0.0588235, 0.537255, 0.996078, 1)
text_scene = ExtResource("2_5e4jn")

[node name="HealTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnergieTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
